syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "OrderRequirementProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Requirement
message RequirementFlatData {
    option (routines.entity_type) = "Requirement";
    option (routines.keys).keys = "requirement_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: requirementId
    string requirement_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string requirement_type_id = 2 [(routines.opts).field_type = "id"];
    string facility_id = 3 [(routines.opts).field_type = "id"];
    string deliverable_id = 4 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 5 [(routines.opts).field_type = "id"];
    string product_id = 6 [(routines.opts).field_type = "id"];
    string status_id = 7 [(routines.opts).field_type = "id"];
    string description = 8 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp requirement_start_date = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp required_by_date = 10 [(routines.opts).field_type = "date-time"];
    routines.Currency estimated_budget = 11 [(routines.opts).field_type = "currency-amount"];
    routines.FixedPoint quantity = 12 [(routines.opts).field_type = "fixed-point"];
    string use_case = 13 [(routines.opts).field_type = "very-long"];
    string reason = 14 [(routines.opts).field_type = "long-varchar"];
    google.protobuf.Timestamp created_date = 15 [(routines.opts).field_type = "date-time"];
    string created_by_user_login = 16 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_modified_date = 17 [(routines.opts).field_type = "date-time"];
    string last_modified_by_user_login = 18 [(routines.opts).field_type = "id-vlong"];
    string facility_id_to = 19 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 20 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 21 [(routines.opts).field_type = "date-time"];
    string tenant_id = 22 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 39;
    map<string, google.protobuf.Any> attachments = 40 ;
}

message RequirementKey{
    string requirement_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message RequirementList{
    repeated RequirementFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListRequirements` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

